var searchData=
[
  ['unbounded_2905',['unbounded',['../classsophus_1_1_region.html#a6a7f1b755db7c4976e169ee4e98f2c65',1,'sophus::Region']]],
  ['undistort_2906',['undistort',['../classsophus_1_1_affine_transform.html#afa8feddd6781dee7a82e97bd1852d14a',1,'sophus::AffineTransform::undistort()'],['../classsophus_1_1_brown_conrady_transform.html#aee85e2b4fd4b17cbde45195e90ae7dff',1,'sophus::BrownConradyTransform::undistort()'],['../classsophus_1_1_kannala_brandt_k3_transform.html#aadf65cc9c3d1a29e5a4d54181f8f35d7',1,'sophus::KannalaBrandtK3Transform::undistort()'],['../classsophus_1_1_camera_model_t.html#a172d82254225e4394356b0e681824656',1,'sophus::CameraModelT::undistort()'],['../classsophus_1_1_camera_model.html#a4b55ddf98f4ec42246d74e19ca7f785d',1,'sophus::CameraModel::undistort()']]],
  ['undistorttable_2907',['undistortTable',['../classsophus_1_1_camera_model_t.html#af4a21e9e6ccaf7d1d2e33d4f221e6c45',1,'sophus::CameraModelT::undistortTable()'],['../classsophus_1_1_camera_model.html#a3cdc5a5841279c7d99f3fbef36734c4a',1,'sophus::CameraModel::undistortTable()']]],
  ['uninitialized_2908',['uninitialized',['../classsophus_1_1_region.html#ad3aaa6fe8f10fa6030a4345c387cdddd',1,'sophus::Region']]],
  ['uniquedataareadeleter_2909',['UniqueDataAreaDeleter',['../structsophus_1_1_unique_data_area_deleter.html#a1341885aa5aa20d65e8c539a93d9ea83',1,'sophus::UniqueDataAreaDeleter::UniqueDataAreaDeleter()=default'],['../structsophus_1_1_unique_data_area_deleter.html#a7ddbc3110b74bf8cbf4703d81b24752b',1,'sophus::UniqueDataAreaDeleter::UniqueDataAreaDeleter(size_t num_bytes)'],['../structsophus_1_1_unique_data_area_deleter.html#aa1a6613d4df79a0c39b0751fda01aa93',1,'sophus::UniqueDataAreaDeleter::UniqueDataAreaDeleter(UniqueDataAreaDeleter const &amp;other)=default']]],
  ['unitcomplex_2910',['unitComplex',['../classsophus_1_1_isometry2.html#a60be09de9df326c35df0e5ebf2f99d86',1,'sophus::Isometry2::unitComplex()'],['../classsophus_1_1_rotation2.html#ae70893d33f10986fa1f8c3fa2760010d',1,'sophus::Rotation2::unitComplex()']]],
  ['unitquaternion_2911',['unitQuaternion',['../classsophus_1_1_isometry3.html#abd7f063480e675ddf320e39cc52b2e70',1,'sophus::Isometry3::unitQuaternion()'],['../classsophus_1_1_rotation3.html#a86d54a116b5c77d74e5ed0806eea14b5',1,'sophus::Rotation3::unitQuaternion()']]],
  ['unitvector_2912',['UnitVector',['../classsophus_1_1_unit_vector.html#a4a6fd07b828c1719c402018198a43b74',1,'sophus::UnitVector']]],
  ['unitx_2913',['unitX',['../classsophus_1_1linalg_1_1_unit_vector_impl.html#a0913c006817d0bfb3d51a8ea26f9da71',1,'sophus::linalg::UnitVectorImpl']]],
  ['unity_2914',['unitY',['../classsophus_1_1linalg_1_1_unit_vector_impl.html#ab26ad7a1d02a72524ca4976a10928974',1,'sophus::linalg::UnitVectorImpl']]],
  ['unitz_2915',['unitZ',['../classsophus_1_1linalg_1_1_unit_vector_impl.html#a3d9e9596eade2b4735e7a20dcdc095a8',1,'sophus::linalg::UnitVectorImpl']]],
  ['unproj_2916',['unproj',['../structsophus_1_1_projection_ortho.html#ab28985f8fab8d5ae4246a59368409d78',1,'sophus::ProjectionOrtho::unproj()'],['../structsophus_1_1_projection_z1.html#a973d6576c2c171eba6f5cf3533a11348',1,'sophus::ProjectionZ1::unproj()'],['../namespacesophus.html#a24a671b2a8a02980dea324acfd9557e0',1,'sophus::unproj()']]],
  ['unprojimpl_2917',['unprojImpl',['../classsophus_1_1_brown_conrady_transform.html#a21de6c8e3f9ae307b3a65bf82fc1ead8',1,'sophus::BrownConradyTransform']]],
  ['unprojprojrountriptest_2918',['unprojProjRountripTest',['../homogeneous__test_8cpp.html#ab267b102d3b81ff7d6249a77b66a5f5b',1,'homogeneous_test.cpp']]],
  ['unsafeconstcast_2919',['unsafeConstCast',['../classsophus_1_1_mut_image_view.html#a774b4f3f1f1cc615801c9130a9a72857',1,'sophus::MutImageView']]],
  ['unsafemutptr_2920',['unsafeMutPtr',['../structsophus_1_1_group_manifold.html#a57bbf1419703fb1046d5ece60a3a2ce7',1,'sophus::GroupManifold::unsafeMutPtr()'],['../classsophus_1_1lie_1_1_group.html#a6bc80d89627cd567f6aeab50518fbae1',1,'sophus::lie::Group::unsafeMutPtr()'],['../classsophus_1_1_unit_vector.html#a881b98b995222980de1624c56cd4fc0d',1,'sophus::UnitVector::unsafeMutPtr()'],['../structsophus_1_1_vector_manifold.html#a97e644a51ad475b62653db9214f5d1f7',1,'sophus::VectorManifold::unsafeMutPtr()']]],
  ['unsafewrapandpromiseproperalignment_2921',['unsafeWrapAndPromiseProperAlignment',['../classsophus_1_1_dyn_image_view.html#a4bc3211a580829193536d1732655d5fb',1,'sophus::DynImageView']]],
  ['unwrapimpl_2922',['unwrapImpl',['../namespacefarm__ng_1_1details.html#ac368ae2ef8278ead7959d082add4f962',1,'farm_ng::details']]],
  ['update_5fdata_2923',['update_data',['../classcore_1_1event__service__metrics_1_1_event_service_health_metrics.html#ac3950d6666d8d61fdf797f20c373799c',1,'core::event_service_metrics::EventServiceHealthMetrics']]],
  ['update_5fstamps_2924',['update_stamps',['../classcore_1_1event__service__metrics_1_1_event_service_health_metrics.html#ae139ef972568bd6dc9633150c41dd51c',1,'core::event_service_metrics::EventServiceHealthMetrics']]],
  ['update_5fsubscriptions_2925',['update_subscriptions',['../classcore_1_1event__client__manager_1_1_event_client_subscription_manager.html#a0c785399419900c4de6987620ac76014',1,'core::event_client_manager::EventClientSubscriptionManager']]],
  ['update_5fsubscriptions_5ffor_5fclient_2926',['update_subscriptions_for_client',['../classcore_1_1event__client__manager_1_1_event_client_subscription_manager.html#a4907ef2d1158ecb57eca40ff509e36a9',1,'core::event_client_manager::EventClientSubscriptionManager']]],
  ['uri_2927',['uri',['../classfarm__ng_1_1_component.html#ab63455d89f8bfee6434c2f7a6ecaea61',1,'farm_ng::Component::uri()'],['../classfarm__ng_1_1_input.html#a54b036fcbfb85affac340479d57bd552',1,'farm_ng::Input::uri()'],['../classfarm__ng_1_1_output.html#a6bb92c2f648d60ac2fd05e31e1a7d65d',1,'farm_ng::Output::uri()'],['../structfarm__ng_1_1_uri.html#a3862ce0c13bf75c910d04452ba59267e',1,'farm_ng::Uri::Uri()'],['../structfarm__ng_1_1_uri.html#a8fa537f082bb255983def4de3712fdd3',1,'farm_ng::Uri::Uri(std::string const &amp;scheme, std::string const &amp;authority, std::string const &amp;path, std::string const &amp;query=&quot;&quot;)']]],
  ['uri_5fquery_5fto_5fdict_2928',['uri_query_to_dict',['../namespacecore_1_1uri.html#a9e2fbb4b4ef351431a0663f0bc1b7723',1,'core::uri']]],
  ['uri_5fto_5fprotobuf_5ftype_2929',['uri_to_protobuf_type',['../namespacecore_1_1uri.html#a45120f2ca1342fc2a2d7faab9042278d',1,'core::uri']]],
  ['uri_5fto_5fstring_2930',['uri_to_string',['../namespacecore_1_1uri.html#aece0c46ed2d8ceb94be42a2149e0b046',1,'core::uri']]],
  ['uris_2931',['uris',['../classcore_1_1event__service_1_1_event_service_grpc.html#a8add7c5cb5805aabe42b58c469929bbc',1,'core::event_service::EventServiceGrpc']]],
  ['uris_5fcommand_2932',['uris_command',['../namespacecore_1_1event__service__tool.html#a41d1bc1432edb7710e4f4be1f2a73a2e',1,'core::event_service_tool']]],
  ['usecount_2933',['useCount',['../classsophus_1_1_dyn_image.html#a600f29b0f89fe981f81941ad00477edc',1,'sophus::DynImage::useCount()'],['../classsophus_1_1_image.html#a8f701405bb7458501232d360e6ccc7e2',1,'sophus::Image::useCount()']]]
];
